objects/tffa__FundingRequest__c.object
<CustomObject>
    <description>Supports the capture of details pertaining to funding a payment obligation using one of the various available sources of funding</description>
    <fields>
        <fullName>ACHReportGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate if this funding record is reported in ACH Report</description>
        <label>ACH Report Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountBalance__c</fullName>
        <description>Account Balance</description>
        <label>AccountBalance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovalTransRefId__c</fullName>
        <description>Approval Transaction Reference Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Transaction Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZSourceAccountBrand__c</fullName>
        <description>Source Account Brand for Internal Transfer</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Source Account Brand for Internal Transfer.</inlineHelpText>
        <label>Source Account Brand</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZSourceAccountStatus__c</fullName>
        <description>Source Account status for Internal Transfer</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Source Account status for Internal Transfer.</inlineHelpText>
        <label>Source Account Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCoreEntryComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Core Entry is Comeplete</description>
        <label>Core Entry Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsObsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Funding is Obsolete</description>
        <label>Obsolete Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MembershipAmount__c</fullName>
        <description>Membership Amount</description>
        <label>Membership Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MicroDepositGUID__c</fullName>
        <description>Micro Deposit GUID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MicroDepositGUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultiPartialFlag__c</fullName>
        <description>Value sent in Approval API call to Elavon. Y means to use partial funds and keep remaining funds in Auth Only state.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Value sent in Approval API call to Elavon. Y means to use partial funds and keep remaining funds in Auth Only state.</inlineHelpText>
        <label>Partial shipment indicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReversalRetryCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>ReversalRetryCount</description>
        <label>Reversal Retry Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TraceNo__c</fullName>
        <description>This column is used to trace the file sent to HarlandClarke or ACH</description>
        <encryptionScheme>None</encryptionScheme>
        <label>TraceNo</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AccountNumber__c</fullName>
        <description>The account number which needs to be debited for this funding request</description>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Account number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AccountTitle__c</fullName>
        <description>The title of the financial account. Typically this is a name of the account owners</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__AccountType__c</fullName>
        <description>Type of account captured for funding</description>
        <label>AccountType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FundingAccountType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Amount__c</fullName>
        <description>The amount of funds which this funding request denotes.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__BillingAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures billing address in case of card funding</description>
        <label>Billing Address</label>
        <referenceTo>tffa__Address__c</referenceTo>
        <relationshipLabel>Funding Requests</relationshipLabel>
        <relationshipName>FundingRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Cancellable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, you can still cancel this bank transfer.</description>
        <label>Cancellable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__CardExpiryMonth__c</fullName>
        <description>Expiry month of the card</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Card expiry month (MM)</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CardExpiryYear__c</fullName>
        <description>Expiry year of the card</description>
        <label>Card expiry year (YY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__CardHolderName__c</fullName>
        <description>Name of card holder as denoted on the card</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Card holder name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CardNumber__c</fullName>
        <description>Card number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Card number</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CompletedOn__c</fullName>
        <description>Date and time on which transfer was completed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__CryptoAmount__c</fullName>
        <description>Crypto currency amount transacted as part of the funding request. Stored in Crypto Currency.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Crypto Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CryptoCurrencyPrice__c</fullName>
        <description>Crypto currency price in USD</description>
        <label>Crypto currency price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__CryptoCurrency__c</fullName>
        <description>Captures Crypto currency types</description>
        <label>Crypto currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CryptoCurrencyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CryptoOrderQuoteId__c</fullName>
        <description>Order quote id of the buy/sell order</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Crypto order quote id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CryptoOrderStatus__c</fullName>
        <description>Status of the crypto buy/sell order</description>
        <label>Crypto order status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CryptoOrderStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>A summarized description of the transaction</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceBrowser__c</fullName>
        <description>The browser of the client from which funding request is captured</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocation__c</fullName>
        <description>Specifies the precise geolocation of the device. A device&apos;s IP can be used to derive this value within some degree of confidence.</description>
        <label>Device Location</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceOS__c</fullName>
        <description>The OS of the client from which funding request was captured</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device os</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Device__c</fullName>
        <description>Identifier of the device from which funding request is captured</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FailureReasonCode__c</fullName>
        <description>Captures the reason code for failure (generally technical) during processing of the funding request.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Failure reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__FailureReason__c</fullName>
        <description>Captures the reason for failure (generally technical) during processing of the funding request.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Failure reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Fees__c</fullName>
        <description>Fees amount of the funding request transaction</description>
        <label>Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__FinancialInstitution__c</fullName>
        <description>Name of the financial institution</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial institution name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__FundingDirection__c</fullName>
        <description>Captures direction of amount flow based on nature of the application</description>
        <label>Funding direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FundingDirectionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IpAddress__c</fullName>
        <description>IP address of the device</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Ip address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsIdentityMismatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True , if there is a suspected identity mismatch between primary applicant and the owner of the source account</description>
        <label>Is Identity Mismatch ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsRemoteCaptured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if current funding request is captured remotely</description>
        <label>Is remote captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__LastSyncpoint__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The last synchronized point/event id</description>
        <label>Last Syncpoint id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__LinkedApplication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to application.</description>
        <label>Application</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>Funding Requests</relationshipLabel>
        <relationshipName>LinkedFundingRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__MaskedAccountNumber__c</fullName>
        <description>Last 4 digits of account numner for display purposes</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__NetAmount__c</fullName>
        <description>Net amount of the transaction excluding the fees levied</description>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If status was overridden.</description>
        <label>Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__OverrideComments__c</fullName>
        <description>Additional notes on why the Funding Status was overridden.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Override Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__OverrideReason__c</fullName>
        <description>Reason for override (if applicable).</description>
        <label>Override reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FundingOverrideReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PrimaryEmail__c</fullName>
        <description>Primary email of the account.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryPhone__c</fullName>
        <description>Primary phone number of the account</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProviderSystemId__c</fullName>
        <description>The provider system id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider System Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProviderSystemToken__c</fullName>
        <description>Holds encrypted value of Access token</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Access token(Encrypted)</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Provider__c</fullName>
        <description>The provider or 3rd party who enables the funding.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Purpose__c</fullName>
        <defaultValue>&quot;DEPOSIT&quot;</defaultValue>
        <description>Captures purpose of the Funding . Default is DEPOSIT</description>
        <label>Funding Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FundingPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__RoutingNumber__c</fullName>
        <description>Routing number of the account</description>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Routing number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SecondaryEmail__c</fullName>
        <description>Secondary email of the account.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SecondaryPhone__c</fullName>
        <description>Secondary phone number of the account</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__State__c</fullName>
        <defaultValue>&quot;Init&quot;</defaultValue>
        <description>The stage of the funding request . This field will be updated on the state transition the funding in the  workflow.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <description>Funding status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FundingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to parent submission.</description>
        <label>Submission</label>
        <referenceTo>tffa__Submission__c</referenceTo>
        <relationshipLabel>Consolidated Funding Requests</relationshipLabel>
        <relationshipName>FundingRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__SubmittedOn__c</fullName>
        <description>Date and time on which transfer was submitted.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Submitted on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__TraceNumber__c</fullName>
        <description>A unique number assigned to every ACH entry by an Originating Depository Financial Institution which identifies that entry within a specific ACH file. The first 8 digits of the trace number are the transit/routing number of the ODFI and the last 7 digits are sequence numbers assigned by the originator.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Trace Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__TransactionDate__c</fullName>
        <description>Timestamp of the funding request execution</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__TransactionReferenceId__c</fullName>
        <description>The reference ID generated against the funding transaction from external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction reference id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Type of funding selected for the current application.</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FundingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Url__c</fullName>
        <description>Holds any url related to processing of the funding request. e.g. payment gateway url. This is usually not persisted and used only for data transmission to UI.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__ValueDate__c</fullName>
        <description>Date when funding was completed and money credited to the account</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__VerificationProvider__c</fullName>
        <description>The provider for verification of the funding request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Verification Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__VerificationStatus__c</fullName>
        <description>Funding Verification status</description>
        <label>Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FundingVerificationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__VerificationToken__c</fullName>
        <description>Holds encrypted value of verification token for the funding</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__VerifiedOn__c</fullName>
        <description>The date and time of verification</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Verified on</label>
        <type>DateTime</type>
    </fields>
    <label>Funding Request</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Requests</pluralLabel>
    <recordTypes>
        <fullName>WIRE</fullName>
        <active>true</active>
        <description>Wire Transfer</description>
        <label>WIRE</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__ACH</fullName>
        <active>true</active>
        <description>ACH payments are electronic payments that are created when the customer gives an originating institution, corporation, or other customer (originator) authorization to debit directly from the customer&apos;s checking or saving account</description>
        <label>ACH</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__APPLE_PAY</fullName>
        <active>true</active>
        <description>Using Apple Pay to provide funds to a new financial account</description>
        <label>Apple Pay</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__CASH</fullName>
        <active>true</active>
        <description>Using cash payment to provide funds to new financial account.</description>
        <label>Cash</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__CHECK</fullName>
        <active>true</active>
        <description>Using cheque instrument to provide funds for a new financial account.</description>
        <label>Check</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__CREDIT_CARD</fullName>
        <active>true</active>
        <description>Using credit card account to provide funds to a new financial account</description>
        <label>Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__DEBIT_CARD</fullName>
        <active>true</active>
        <description>Using debit card account to provide funds to a new financial account</description>
        <label>Debit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__GOOGLE_PAY</fullName>
        <active>true</active>
        <description>Using Google Pay to provide funds to a new financial account</description>
        <label>Google Pay</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__INTERNAL_TRANSFER</fullName>
        <active>true</active>
        <description>Using internal bank account to provide funds to a new financial account</description>
        <label>Internal Transfer</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__PAYPAL</fullName>
        <active>true</active>
        <description>Using Paypal to provide funds for a new financial account.</description>
        <label>Paypal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>